clusters/corpus/apps/media/pasta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pasta
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/target: ${public_services_ip}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "pasta.${public_services_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pasta
                port:
                  number: 80
